--- a/pom.xml
+++ b/pom.xml
@@ -14,8 +14,10 @@
     <name>edupro-web</name>
     <description>edupro-web</description>
     <properties>
-        <java.version>21</java.version>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <java.version>71</java.version>
         <ultraq.thymeleaf.version>3.3.0</ultraq.thymeleaf.version>
+        <maven.compiler.release>${java.version}</maven.compiler.release>
     </properties>
     <dependencies>
         <dependency>
