--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,12 +2,15 @@ server.port=8082
 spring.mvc.format.date=yyyy-MM-dd
 spring.mvc.format.date-time=yyyy-MM-dd HH:mm:ss
 spring.mvc.format.time=HH:mm:ss
-spring.application.back-end-url=http://localhost:8081/api/v1
+spring.application.back-end-url=https://edupro.pass-pdam.com/api/api/v1
 spring.security.white-list="/"
+
 spring.security.oauth2.client.registration.keycloak.client-id=edupro-login
 spring.security.oauth2.client.registration.keycloak.authorization-grant-type=authorization_code
 spring.security.oauth2.client.registration.keycloak.scope=openid
-spring.security.oauth2.client.registration.keycloak.client-secret=RBJ6eu1QalyjhtNZhEXjPKgx9RkXlDT1
-spring.security.oauth2.client.provider.keycloak.issuer-uri=http://localhost:8080/realms/edupro
+spring.security.oauth2.client.registration.keycloak.client-secret=MujtTDBmG57yRtTj1pexjDnQ17KJaprU
+spring.security.oauth2.client.registration.keycloak.redirect-uri=https://edupro.pass-pdam.com/edupro/dashboard
+
+spring.security.oauth2.client.provider.keycloak.issuer-uri=https://edupro.pass-pdam.com/keycloak/realms/edupro
 spring.security.oauth2.client.provider.keycloak.user-name-attribute=preferred_username
-spring.security.oauth2.resourceserver.jwt.issuer-uri=http://localhost:8080/realms/edupro
+spring.security.oauth2.resourceserver.jwt.issuer-uri=https://edupro.pass-pdam.com/keycloak/realms/edupro
