--- a/src/main/resources/local.properties
+++ b/src/main/resources/local.properties
@@ -6,8 +6,8 @@ spring.application.back-end-url=http://localhost:8081/api/v1
 
 spring.security.oauth2.client.registration.keycloak.client-id=edupro-login
 spring.security.oauth2.client.registration.keycloak.authorization-grant-type=authorization_code
-spring.security.oauth2.client.registration.keycloak.scope=openid
-spring.security.oauth2.client.registration.keycloak.client-secret=MujtTDBmG57yRtTj1pexjDnQ17KJaprU
+spring.security.oauth2.client.registration.keycloak.scope=openid,profile,roles
+spring.security.oauth2.client.registration.keycloak.client-secret=RBJ6eu1QalyjhtNZhEXjPKgx9RkXlDT1
 spring.security.oauth2.client.registration.keycloak.redirect-uri=http://localhost:8082/dashboard
 
 spring.security.oauth2.client.provider.keycloak.issuer-uri=http://localhost:8080/realms/edupro
