--- a/src/main/resources/prod.properties
+++ b/src/main/resources/prod.properties
@@ -2,7 +2,7 @@ server.port=8082
 spring.mvc.format.date=yyyy-MM-dd
 spring.mvc.format.date-time=yyyy-MM-dd HH:mm:ss
 spring.mvc.format.time=HH:mm:ss
-spring.application.back-end-url=https://edupro.pass-pdam.com/api/api/v1
+spring.application.back-end-url=https://edupro.pass-pdam.com/keycloak/api/api/v1
 
 spring.security.oauth2.client.registration.keycloak.client-id=edupro-login
 spring.security.oauth2.client.registration.keycloak.authorization-grant-type=authorization_code
@@ -13,3 +13,4 @@ spring.security.oauth2.client.registration.keycloak.redirect-uri=https://edupro.
 spring.security.oauth2.client.provider.keycloak.issuer-uri=https://edupro.pass-pdam.com/keycloak/realms/edupro
 spring.security.oauth2.client.provider.keycloak.user-name-attribute=preferred_username
 spring.security.oauth2.resourceserver.jwt.issuer-uri=https://edupro.pass-pdam.com/keycloak/realms/edupro
+spring.security.oauth2.resourceserver.jwt.jwk-set-uri=https://edupro.pass-pdam.com/keycloak/protocol/openid-connect/certs
