feat: update classroom

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,8 +7,8 @@ spring.application.back-end-url=http://localhost:8081/api/v1
 spring.security.oauth2.client.registration.keycloak.client-id=edupro-login
 spring.security.oauth2.client.registration.keycloak.authorization-grant-type=authorization_code
 spring.security.oauth2.client.registration.keycloak.scope=openid
-spring.security.oauth2.client.registration.keycloak.client-secret=MujtTDBmG57yRtTj1pexjDnQ17KJaprU
-spring.security.oauth2.client.registration.keycloak.redirect-uri=http://localhost:8082/dashboard
+spring.security.oauth2.client.registration.keycloak.client-secret=1VMf1MSCIG11ZJwwZm04iOXDcPzs3mME
+spring.security.oauth2.client.registration.keycloak.redirect-uri=http://localhost:8082/login/oauth2/code/edupro-login
 
 spring.security.oauth2.client.provider.keycloak.issuer-uri=http://localhost:8080/realms/edupro
 spring.security.oauth2.client.provider.keycloak.user-name-attribute=preferred_username
