--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ server.port=8082
 spring.mvc.format.date=yyyy-MM-dd
 spring.mvc.format.date-time=yyyy-MM-dd HH:mm:ss
 spring.mvc.format.time=HH:mm:ss
-spring.application.back-end-url=https://edupro.pass-pdam.com/api/api/v1
+spring.application.back-end-url=https://edupro.pass-pdam.com/api/v1
 
 spring.security.oauth2.client.registration.keycloak.client-id=edupro-login
 spring.security.oauth2.client.registration.keycloak.authorization-grant-type=authorization_code
