--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,15 +2,15 @@ server.port=8082
 spring.mvc.format.date=yyyy-MM-dd
 spring.mvc.format.date-time=yyyy-MM-dd HH:mm:ss
 spring.mvc.format.time=HH:mm:ss
-spring.application.back-end-url=https://edupro.pass-pdam.com/api/v1
+spring.application.back-end-url=http://localhost:8081/api/v1
 
 spring.security.oauth2.client.registration.keycloak.client-id=edupro-login
 spring.security.oauth2.client.registration.keycloak.authorization-grant-type=authorization_code
 spring.security.oauth2.client.registration.keycloak.scope=openid,profile,roles
-spring.security.oauth2.client.registration.keycloak.client-secret=MujtTDBmG57yRtTj1pexjDnQ17KJaprU
-spring.security.oauth2.client.registration.keycloak.redirect-uri=https://edupro.pass-pdam.com/login/oauth2/code/edupro-login
+spring.security.oauth2.client.registration.keycloak.client-secret=pPHU2GZxMXWvxzHBJKxGGnvlPyrOdaTF
+spring.security.oauth2.client.registration.keycloak.redirect-uri=http://localhost:8082/login/oauth2/code/edupro-login
 
-spring.security.oauth2.client.provider.keycloak.issuer-uri=https://edupro.pass-pdam.com/keycloak/realms/edupro
+spring.security.oauth2.client.provider.keycloak.issuer-uri=http://localhost:8080/realms/edupro
 spring.security.oauth2.client.provider.keycloak.user-name-attribute=preferred_username
-spring.security.oauth2.resourceserver.jwt.issuer-uri=https://edupro.pass-pdam.com/keycloak/realms/edupro
-spring.security.oauth2.resourceserver.jwt.jwk-set-uri=https://edupro.pass-pdam.com/keycloak/protocol/openid-connect/certs
+spring.security.oauth2.resourceserver.jwt.issuer-uri=http://localhost:8080/realms/edupro
+spring.security.oauth2.resourceserver.jwt.jwk-set-uri=http://localhost:8080/realms/edupro/protocol/openid-connect/certs
