--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -1,10 +1,10 @@
 spring.application.back-end-url=http://localhost:8081/api/v1
 
-spring.security.oauth2.client.registration.keycloak.client-id=edupro-login
+spring.security.oauth2.client.registration.keycloak.client-id=edupro-login-local
 spring.security.oauth2.client.registration.keycloak.authorization-grant-type=authorization_code
 spring.security.oauth2.client.registration.keycloak.scope=openid,profile,roles
-spring.security.oauth2.client.registration.keycloak.client-secret=MujtTDBmG57yRtTj1pexjDnQ17KJaprU
-spring.security.oauth2.client.registration.keycloak.redirect-uri=https://edupro.pass-pdam.com/login/oauth2/code/edupro-login
+spring.security.oauth2.client.registration.keycloak.client-secret=M19iHNI2uQCRKEK5NvyNqDQF3dIQ6gya
+spring.security.oauth2.client.registration.keycloak.redirect-uri=http://localhost:8082/login/oauth2/code/edupro-login
 
 spring.security.oauth2.client.provider.keycloak.issuer-uri=https://edupro.pass-pdam.com/keycloak/realms/edupro
 spring.security.oauth2.client.provider.keycloak.user-name-attribute=preferred_username
